Fixed some spacing issues

--- a/scss/base/_utilities.scss
+++ b/scss/base/_utilities.scss
@@ -2,6 +2,14 @@ section {
   padding: 120px 0;
 }
 
+.section-first{
+  padding: 60px 0px 35px 0px;
+}
+
+.section-others{
+  padding: 35px 0;
+}
+
 // Medium devices (tablets, less than 992px)
 @media only screen and (max-width: 991.98px) {
   section {
@@ -20,5 +28,11 @@ section {
 @media only screen and (max-width: 575.98px) {
   section {
     padding: 50px 20px;
+  }
+  .section-others{
+    padding: 20px 0;
+  }
+  .section-first{
+    padding: 40px 0px 0px 0px;
   }
 }
