--- a/scss/pages/_search-result.scss
+++ b/scss/pages/_search-result.scss
@@ -18,6 +18,7 @@
         border: 0;
         outline: 0;
         padding: 10px 20px;
+        background: #fff !important;
 
         font-family: "Lato";
         font-style: normal;
@@ -117,6 +118,10 @@
     border: 2px solid #fdb417;
     border-radius: 20px;
     padding: 2rem 3rem;
+
+    .margin-t{
+      margin-top: 0.6rem;
+    }
 
     &--item {
       display: flex;
